templates/style/rustdoc-2021-12-05.scss
// FIXME: Use modules
@import "rustdoc-common";

// This file is needed to overload the previous docs.rs style. It is added into crates generated
// using rustdoc after https://github.com/rust-lang/rust/pull/91356 has been merged.

#rustdoc_body_wrapper {
    padding: 0;

    .sidebar {
        margin-top: 0;
        top: $top-navbar-height;
        height: calc(100vh - #{$top-navbar-height});
        /* Since we use `overflow-wrap: anywhere;`, we never have the need for a X scrollbar... */
        overflow-x: hidden;

        .sidebar-menu {
            top: $top-navbar-height;
            margin-bottom: $footer-height;
        }
    }

    main {
        padding-bottom: 50px;
    }
}

div.container-rustdoc {
    > .docs-rs-footer {
        bottom: 0;
        right: 0;
        left: 0;
    }
}

div.rustdoc {
    #sidebar-toggle {
        top: 0;
    }
}

